# DoughJo

./: .env  .gitignore  NathanQuestionaireCode  README.md
Nathan/: Dashboard.js  NathanPlotlyCode  PopulationData
Nathan/INFO/: 50-20-30-Budgeting-Rule.md  infographicA.md  infographicB.md  infographicC.md
backend/: Cargo.toml  README.md
backend/docs/: BackendRoutes.md  test_ideal_budget.sh  test_login_user.sh  test_month_transactions.sh
backend/resources/: DoughJoLogo.xcf
backend/src/: application_state.rs  ideal_budget.rs  main.rs  transactions.rs  user_routes.rs
docs/: BackendRoutes.md  BackendStack.md  plaid_resp.json  post_login_sample.json  post_sample.json  test_create_user.sh
frontend/: package.json  tailwind.config.js
frontend/src/: App.js  api.js
frontend/src/Components/: navbar.js
frontend/src/pages/: BudgetPage.js  BudgetTips.js  CreditPage.js  CreditTips.js  Dashboard.js  HomePage.js  Login.js  Questionnaire.js  QuestionnairePage.js  Register.js  TipsPage.js
src/: application_state.rs  transactions.rs  user_routes.rs
