[package]
name = "hackillinois_project"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
bcrypt = "0.17.0"
chrono = "0.4.40"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
neo4rs = "0.8.0"
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
tokio = {version = "1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
